tests/paczka1/fuzzy1/19266835.err
Error in line 2: A445 A445 26,5
Error in line 8: A445 S527 85,1
Error in line 17: CCC7VX S115 77,89
Error in line 18: Meikwgig S115 $22,3
Error in line 15: CMcxLF3 A445 37,7
Error in line 14: b6ruQkhm S527 19,7
Error in line 24: b6ruQkhm A445 47,7
Error in line 25: b6ruQkhm S115 22,9
Error in line 22: A445 S259 31,1
Error in line 32: A445 S115 79,0
Error in line 34: A445 S527 98,6
